# labi

./: task1.cpp  task2.cpp
laba1/: CMakeLists.txt  task1.cpp
laba2/: CMakeLists.txt  task1.cpp  task2.cpp
laba3/: CMakeLists.txt
laba3/async_server/: client.cpp  client.hpp  main_client.cpp  main_server.cpp  server.cpp  server.hpp
laba3/task1_sync/: sync_client.cpp  sync_server.cpp
ДЗ2/task1/: main.cpp  task1
ДЗ2/task10/: Group.cpp  Group.hpp  Person.cpp  Person.hpp  RecordBook.cpp  RecordBook.hpp  Student.cpp  Student.hpp  main.cpp  task10
ДЗ2/task11_project/: FileManager.cpp  FileManager.hpp  Group.cpp  Group.hpp  Person.cpp  Person.hpp  RecordBook.cpp  RecordBook.hpp  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  main.cpp  task11
ДЗ2/task2/: main.cpp  task2
ДЗ2/task3/: main.cpp  task3
ДЗ2/task4/: main.cpp  task4
ДЗ2/task5/: main.cpp  task5
ДЗ2/task6/: main.cpp  task6
ДЗ2/task7/: main.cpp  task7
ДЗ2/task8/: main.cpp  task8
ДЗ2/task9/: main.cpp  task9
ДЗ3/task1/: main.cpp  task1
ДЗ3/task2/: main.cpp  task2
ДЗ3/task3/: main.cpp  task3
ДЗ3/task4/: main.cpp  task4
ДЗ3/task5/: main.cpp  task5
ДЗ3/task6/: main.cpp  task6
ДЗ3/task7/: main.cpp  task7
ДЗ3/task8/: main.cpp  task8
ДЗ4/task1/: main.cpp  task1
ДЗ4/task2/: main.cpp  task2
ДЗ4/task3/: main.cpp  task3
ДЗ4/task4/: main.cpp  task4
ДЗ4/task5/: main.cpp  task5
ДЗ4/task6/: main.cpp  task6
ДЗ4/task7/: main.cpp  task7
ДЗ5/task1/: main.cpp  task1
ДЗ5/task2/: main.cpp  task2
ДЗ5/task3/: main.cpp  task3
ДЗ5/task4/: main.cpp  task4
ДЗ5/task5/: main.cpp  (+1 more)
(+2 files in other folders)
